<resources>
    <string name="app_name">Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>

    <string name="catalog">Каталог товаров</string>
    <string name="basket">Корзина</string>
    <string name="favorites">Избранное</string>
    <string name="myorders">Мои заказы</string>
    <string name="info">Информация</string>
    <string name="languages">Языки</string>


</resources>
