<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/home"
            android:title="@string/catalog" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/shoppingcart"
            android:title="@string/basket" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myorders" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_languages"
            android:icon="@drawable/settings"
            android:title="@string/languages" />
    </group>



</menu>
